# redistil

./: CHANGELOG.md  LICENSE  README.md  requirements.test.txt  requirements.txt  setup.cfg  shell.nix
redistil/: __init__.py  pipeline.py  redistil.py
tests/: test_fields.py  test_model.py  test_pipeline.py  test_redistil.py
