[metadata]
name = redistil
version = attr: redistil.__version__
description = Declarative data types, using Cerberus and Redis
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = BSD 2-Clause License

author = Adam Griffiths
author_email = adam.lw.griffiths@gmail.com
url = https://github.com/adamlwgriffiths/redistil/
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

test_suite = tests

[options]
packages = redistil
python_requires = >=3.5
install_requires =
    cerberus
    redis

#tests_require =
#    redis_mock
